<resources>
    <string name="app_name">My Application</string>
    <string name="send">Отправить</string>
    <string name="hello_user">Привет, Username!</string>
    <string name="user_info_hint">Расскажи о себе. Это необходимо, чтобы подбирать партнёров за столом</string>
    <string name="gender">Пол:</string>
    <string name="age">Возраст:</string>
    <string name="next">Продолжить</string>
    <string name="connection_error">Ошибка подключения</string>


</resources>